attempting to fix window resizing issue on mobile by changing vh to %

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ main {
 .platform {
     background-color: #fff;
     color: #000;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -216,7 +216,7 @@ main {
 .solutions {
     background-color: #fff;
     color: #000;
-    height: 100vh;
+    height: 100%;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -226,7 +226,7 @@ main {
 .solutions-content {
     display: flex;
     flex-direction: column;
-    margin: 30rem auto;
+    margin: 10rem auto;
     align-items: center;
     max-width: 75%;
 }
@@ -241,7 +241,7 @@ main {
 }
 
 .solutions ul li {
-    /* position: relative; */
+    position: relative;
     background-color: rgb(20, 20, 20);
     border-radius: 25px;
     color: #fff;
@@ -257,7 +257,32 @@ main {
     margin-top: 1rem;
 }
 
+.checkmark {
+    display: inline-flex;
+    width: 1.375rem;
+    height: 1.031rem;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+    transform: rotate(45deg);
+}
 
+.checkmark_stem {
+    position: absolute;
+    width: 0.188rem;
+    height: 0.563rem;
+    background-color:rgba(0, 255, 170, 0.836);
+    left: 0.688rem;
+    top: 0.375rem;
+}
+
+.checkmark_kick {
+    position: absolute;
+    width: 0.188rem;
+    height: 0.188rem;
+    background-color:rgba(0, 255, 170, 0.836);
+    left: .5rem;
+    top: 0.75rem;
+}
 
 /* Research ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
 
